--- a/Basic_HTML_Forms.html
+++ b/Basic_HTML_Forms.html
@@ -4,64 +4,8 @@
    <meta charset="utf-8">   
    <title></title>  
 
-    <style>
-      form {
-         margin: 0 auto;
-         width: 400px;
-         padding: 1em;
-         border: 1px solid #CCC;
-         border-radius: 1em;
-       }
 
 
-	form div + div {
- 	   margin-top: 1em;
-	}
-
-  
-	label {
-    display: inline-block;
-	  width: 90px;
-	}
-
-	input, textarea {
-	  font: 1em sans-serif;
-    width: 300px;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-	  border: 1px solid #999;
-  }
-
-
-
-	input:focus, textarea:focus {
-	   border-color: #000;
-	}
-
-	
-	textarea {
-	   vertical-align: top;
-	   height: 5em;
-	   resize: vertical;
-	}
-
-	.button {
-	   padding-left: 90px;
-	}
-
-	
-	button {
-	  margin-left: .5em;
-	}
-
-  select, #movie {
-    display: block;
-  }
-	
-	#tv, #movies, #tunes {
-	  width: 0;
-	}
-</style> 
  </head>   
  <body> 
 	<!--This is exercise 1 -->
@@ -108,12 +52,11 @@
     <button type="button">Search</button>
 	  <input type="search" autosave>  
 	  <fieldset>
-	    <label for ="tv"><input type="radio" id="tv">TV</label>
-	    <label for ="movie"><input type="radio" id="movies">Movies</label>
-	    <label for ="tunes"><input type="radio" id="tunes">Music</label>
+	    <legend>Movie Titles</legend>
+  	    <label for ="tv"><input type="radio" id="tv">TV</label>
+  	    <label for ="movie"> <input type="radio" id="movies">Movies</label>
+	      <label for ="tunes"><input type="radio" id="tunes">Music</label>
 	  </fieldset>
-	  
-	  
   </form>
 	<br>
 	<br>
@@ -134,7 +77,7 @@
     </select>
     <label for="rate">Rate Movie</label>
     <input type="range" min="1" max="5" step="1" id="rate" />
-    <label><input type="checkbox"  value="add to Faves"checked />Add to Faves</label>
+    <label for="faves"><input type="checkbox"  id ="faves" value="add to Faves" checked />Add to Faves</label>
     <button type="submit" id="rate">Submit Rate</button>
     
   </form>
