--- a/Basic_HTML_Forms.html
+++ b/Basic_HTML_Forms.html
@@ -53,9 +53,26 @@
 	  <input type="search" autosave>  
 	  <fieldset>
 	    <legend>Movie Titles</legend>
-  	    <label for ="tv"><input type="radio" id="tv">TV</label>
-  	    <label for ="movie"> <input type="radio" id="movies">Movies</label>
-	      <label for ="tunes"><input type="radio" id="tunes">Music</label>
+	      <ul>
+  	      <li>
+  	        <label for ="tv">
+  	          <input type="radio" id="tv">
+  	            TV
+  	       </label>
+  	     </li>
+  	     <li>
+          <label for ="movie"> 
+            <input type="radio" id="movies">
+              Movies
+          </label>
+        </li>
+        <li>
+          <label for ="tunes">
+            <input type="radio" id="tunes">
+              Music
+            </label>
+        </li>
+	     </ul>
 	  </fieldset>
   </form>
 	<br>
